# snn-space-awarness-domain

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_inference_mode.py
configs/: config.yaml
scripts/: animate_detection.py  check_timestamp_units.py  check_weights.py  diagnose.py  evaluate.py  inference.py  plot_training.py  systematic_evaluation.py  test_spike_locations.py  threshold_sweep.py  train.py  train_cv.py  visualize_spike.py
spikeseg/: __init__.py  config.py
spikeseg/algorithms/: __init__.py  hulk.py  smash.py
spikeseg/core/: __init__.py  functional.py  layers.py  neurons.py
spikeseg/data/: __init__.py  datasets.py  events.py  preprocessing.py
spikeseg/learning/: __init__.py  stdp.py  wta.py
spikeseg/models/: __init__.py  decoder.py  encoder.py  spikeseg.py
spikeseg/utils/: __init__.py  logging.py  visualization.py
tests/: __init__.py  conftest.py  test_model.py  test_neurons.py  test_stdp.py
